fixing up alignment of chatbar on home.html

--- a/stylesheets/home.css
+++ b/stylesheets/home.css
@@ -35,3 +35,15 @@
 
 */
 .top-buffer { margin-top:20px; }
+
+#chat-bar {
+	position:absolute;
+	top:60;
+	right:0;
+	bottom:0;
+	padding-right: 0px;
+}
+
+body, html {
+	overflow: hidden;
+}
